# solfacil_challenge

./: Dockerfile.app  README.md  docker-compose.yaml  pyproject.toml
app/application/dtos/: parceiro_dto.py
app/application/ports/parceiro/: parceiro_repository.py
app/application/usecases/parceiro/: abstract_import_csv.py
app/domain/entities/parceiro/: parceiro.py
app/domain/usecases/parceiro/: import_csv.py  test_import_csv.py
app/infrastructure/database/sqlalchemy/: models.py  session.py  sql_parceiro_repository.py
app/interfaces/api/controller/: parceiro_controller.py
app/interfaces/api/fastapi/: main_router.py
app/interfaces/api/fastapi/routes/: parceiro_router.py
app/main/: main.py
fastapi_crud_app/app/application/ports/parceiro/: parceiro_repository.py
fastapi_crud_app/app/application/services/parceiro/: parceiro_service.py
fastapi_crud_app/app/domain/models/parceiro/: parceiro.py
fastapi_crud_app/app/domain/usecases/parceiro/: import_csv.py
fastapi_crud_app/app/main/: main.py
